fix scope params
